[package]
name = "cargo-saml10"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.7", features = ["derive"] }
probe-rs = { version = "0.12.0", git = "https://github.com/probe-rs/probe-rs" }
probe-rs-cli-util = { version = "0.12.0", git = "https://github.com/probe-rs/probe-rs" }
object = "0.29"
log = "0.4"
simplelog = "^0.12.0"

[patch."https://github.com/probe-rs/probe-rs"]
probe-rs = { path = "../../tools/probe-rs/probe-rs" }
probe-rs-cli-util = { path = "../../tools/probe-rs/probe-rs-cli-util" }
