[package]
name = "cargo-saml10"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.7", features = ["derive"] }
probe-rs = { git = "https://github.com/neonquill/probe-rs", branch = "atsaml10" }
probe-rs-cli-util = { git = "https://github.com/neonquill/probe-rs", branch = "atsaml10" }
object = "0.29"
log = "0.4"
simplelog = "^0.12.0"
